# ergvein

./: cabal.project  default.nix  overrides.nix  platform-overlay.nix  shells.sh
cbitstream/: CHANGELOG.md  README.md  cbitstream.cabal
cbitstream/src/Data/Bitstream/C/: Raw.hsc
common/: ergvein-common.cabal
common/src/Ergvein/: IO.hs
crypto/src/Ergvein/Crypto/: Util.hs
data-merkle-tree/: data-merkle-tree.cabal
derivations/: hackage-direct-sqlite.nix  hackage-sqlite-simple.nix  haskell-bitcoin-api.nix  include-file.nix  servant-blaze.nix  servant-reflex.nix
derivations/postgresql/: default.nix
ergo-api/: ergo-api.cabal
ergo-api/test/Network/Ergo/Api/: BlocksSpec.hs  InfoSpec.hs
ergvein-faucet/: README.md
ergvein-faucet/ergvein-faucet-back/: config.yaml  ergvein-faucet-back.cabal  ghcid.sh  serve.sh
ergvein-faucet/ergvein-faucet-back/app/: Main.hs
ergvein-faucet/ergvein-faucet-back/src/Ergvein/Faucet/: Backend.hs
ergvein-faucet/ergvein-faucet-back/src/Ergvein/Faucet/Backend/: Config.hs  Index.hs  Monad.hs  Server.hs
ergvein-faucet/ergvein-faucet-back/src/Ergvein/Faucet/Backend/Btc/: Client.hs
ergvein-faucet/ergvein-faucet-client/: ergvein-faucet-client.cabal
ergvein-faucet/ergvein-faucet-client/src/Ergvein/Faucet/: Client.hs
ergvein-faucet/ergvein-faucet-front/: .gitignore  build.sh  cabal.project  ergvein-faucet-front.cabal  shell.sh
ergvein-faucet/ergvein-faucet-front/app/: Main.hs
ergvein-faucet/ergvein-faucet-front/src/Ergvein/Faucet/: Frontend.hs
ergvein-faucet/ergvein-faucet-front/src/Ergvein/Faucet/Frontend/: Client.hs  Elements.hs  Inputs.hs  Monad.hs  Style.hs
ergvein-faucet/ergvein-faucet-front/src/Ergvein/Faucet/Frontend/Style/: TH.hs
ergvein-faucet/ergvein-faucet-shared/: ergvein-faucet-shared.cabal
ergvein-faucet/ergvein-faucet-shared/src/Ergvein/Faucet/: API.hs  Aeson.hs  Shared.hs
ergvein-website/docs/01_Getting Started/: introduction.markdown  template.markdown
ergvein-website/docs/02_Components/: avatars.markdown
golomb-rice/: CHANGELOG.md  golomb-rice.cabal
golomb-rice/cbits/: golombrice.c
golomb-rice/include/: golombrice.h
golomb-rice/src/Data/Encoding/GolombRice/Strict/: C.hs
golomb-rice/test/Data/Encoding/Mutable/C/: GolombRiceTest.hs
haskoin-network/: haskoin-network.cabal
haskoin-network/src/Haskoin/: Node.hs
haskoin-network/src/Network/Haskoin/Node/: Chain.hs  Common.hs  Manager.hs  Peer.hs
haskoin-network/test/Haskoin/: NodeSpec.hs
index-api/src/Ergvein/Index/: API.hs
index-client/src/Ergvein/Index/Client/: V1.hs
index-protocol/src/Ergvein/Index/Protocol/: Deserialization.hs  Serialization.hs  Types.hs
index-protocol/tests/: ProtocolTest.hs
index-protocol/tests/ProtocolTest/: Generators.hs
index-server/: ergvein-index-server.cabal
index-server/app/: Main.hs
index-server/src/Ergvein/Index/Server/: App.hs  DB.hs  Environment.hs  Metrics.hs  Monad.hs
index-server/src/Ergvein/Index/Server/BlockchainScanning/: Bitcoin.hs  Common.hs  Cypra.hs  Ergo.hs  Types.hs
index-server/src/Ergvein/Index/Server/DB/: Conversions.hs  Queries.hs  Serialize.hs  Utils.hs
index-server/src/Ergvein/Index/Server/PeerDiscovery/: Discovery.hs  Types.hs
index-server/src/Ergvein/Index/Server/Server/: V1.hs
index-server/src/Ergvein/Index/Server/TCPService/: Connections.hs  Conversions.hs  MessageHandler.hs  Server.hs
index-server/tests/: TestMain.hs
index-server/tests/Test/: Generators.hs
interfaces/ergo/test/Tests/Ergo/: Api.hs
nix/modules/: ergvein.nix
nix/service/: bitcoin-regtest.nix  ergvein-faucet.nix
nixpkgs-overlays/: default.nix
reflex-android-notifications/: reflex-android-notifications.cabal
reflex-android-notifications/cbits/: notifications.c
reflex-android-notifications/src/Reflex/Android/: Notifications.hs
reflex-external-ref/src/Reflex/: ExternalRef.hs
reflex-localize/: reflex-localize.cabal
reflex-localize/src/Reflex/Localize/: Class.hs
ui-playground/: Style.hs
wallet/: ergvein-wallet.cabal  ghcid.sh
wallet-filters/: .gitignore  download-testnet-filters.sh  ergvein-wallet-filters.cabal
wallet-filters/app/: FiltersFetcher.hs
wallet-filters/bench/: BTC.hs
wallet-filters/src/Ergvein/: Filters.hs
wallet-filters/src/Ergvein/Filters/: Ergo.hs  Mutable.hs
wallet-filters/test/Ergvein/Filters/: BtcTest.hs
wallet-filters/test/Ergvein/Filters/Btc/: MutableTest.hs
wallet-types/: ergvein-wallet-types.cabal  ghcid.sh
wallet-types/src/Ergvein/Types/: Address.hs  Currency.hs  Derive.hs  Fees.hs  Headers.hs  Keys.hs  Network.hs  Storage.hs  Transaction.hs  Utxo.hs
wallet-types/src/Ergvein/Types/Keys/: Prim.hs
wallet/src/Ergvein/Wallet/: Camera.hs  Client.hs  Currencies.hs  Debug.hs  IP.hs  Main.hs  Node.hs  Orphans.hs  Password.hs  Scan.hs  Settings.hs  Storage.hs  Style.hs  Tx.hs  Util.hs  Validate.hs
wallet/src/Ergvein/Wallet/Elements/: Input.hs  Toggle.hs
wallet/src/Ergvein/Wallet/Filters/: Loader.hs  Scan.hs  Storage.hs
wallet/src/Ergvein/Wallet/Filters/Btc/: Queries.hs  Types.hs
wallet/src/Ergvein/Wallet/Headers/: Loader.hs
wallet/src/Ergvein/Wallet/Indexer/: Socket.hs
wallet/src/Ergvein/Wallet/Localization/: Currency.hs  Send.hs
wallet/src/Ergvein/Wallet/Mempool/: Types.hs
wallet/src/Ergvein/Wallet/Monad/: Auth.hs  Base.hs  Client.hs  Front.hs  Prim.hs  Storage.hs  Unauth.hs  Util.hs
wallet/src/Ergvein/Wallet/Node/: BTC.hs  ERGO.hs  Prim.hs  Socket.hs  Types.hs
wallet/src/Ergvein/Wallet/Node/BTC/: Mempool.hs
wallet/src/Ergvein/Wallet/Page/: Balances.hs  Currencies.hs  History.hs  Initial.hs  Network.hs  Password.hs  QRCode.hs  Receive.hs  Restore.hs  Seed.hs  Send.hs  Settings.hs  Share.hs  Transaction.hs
wallet/src/Ergvein/Wallet/Page/Settings/: MnemonicExport.hs  Network.hs  Unauth.hs
wallet/src/Ergvein/Wallet/Storage/: AuthInfo.hs  Util.hs
wallet/src/Ergvein/Wallet/Sync/: Status.hs  Widget.hs
wallet/src/Ergvein/Wallet/Widget/: Balance.hs
wallet/src/Ergvein/Wallet/Worker/: Fees.hs  Height.hs  Indexer.hs  IndexerNetworkRefreshWorker.hs  Node.hs  PubKeysGenerator.hs
(+6 files in other folders)
