name:                reflex-android-notifications
version:             1.0.2.0
synopsis:            Android system notifications API for Reflex
description:         See README.md
stability:           Experimental
category:            Reflex, FRP, Web, GUI, HTML, Android, Reactive, Reactivity, User Interfaces, User-interface
build-type:          Simple
cabal-version:       >=1.10
license:             MIT
license-file:        LICENSE
copyright:           2020 ATUM SOLUTIONS AG
author:
                     - Levon Oganyan
maintainer:          - Levon Oganyan <lemarwin42@gmail.com>

flag disable-android
  description: Disable android specific features. Useful for multiplatform projects
  default: False
  manual: True

library
  hs-source-dirs:      src
  build-depends:
      base
    , reflex                    >= 0.4      && < 0.7
  default-language:    Haskell2010
  default-extensions:
    MultiParamTypeClasses
    OverloadedStrings
  if flag(disable-android)
  else
    exposed-modules:
      Reflex.Android.Notifications
    build-depends: android-activity, x509-android
    build-tools: hsc2hs
    c-sources:
      cbits/notifications.c
