name:                ergvein-wallet-types
version:             0.1.0.0
synopsis:            Domain types that shared across Ergvein cryptowallet packages.
description:         See README.md
category:            Cryptocurrency
build-type:          Simple
cabal-version:       >=2.0

library
  hs-source-dirs:      src
  exposed-modules:
    Ergvein.Types
    Ergvein.Types.Address
    Ergvein.Types.AuthInfo
    Ergvein.Types.Currency
    Ergvein.Types.Derive
    Ergvein.Types.Fees
    Ergvein.Types.Headers
    Ergvein.Types.Keys
    Ergvein.Types.Network
    Ergvein.Types.Restore
    Ergvein.Types.Storage
    Ergvein.Types.Transaction
    Ergvein.Types.Utxo
  default-language:    Haskell2010
  build-depends:
      aeson
    , base
    , base64-bytestring         >= 1        && < 1.0.0.3
    , bytestring                >= 0.10     && < 0.11
    , cereal
    , containers                >= 0.6      && < 0.7
    , cryptonite                >= 0.25     && < 0.26
    , deepseq                   >= 1.4      && < 1.5
    , ergvein-common
    , ergvein-crypto
    , flat
    , hashable                  >= 1.2.7.0  && < 1.3.0.1
    , haskoin-core              >= 0.12.0   && < 0.12.1
    , http-api-data             >= 0.3      && < 0.5
    , jsaddle
    , lens                      == 4.17.*
    , memory                    >= 0.14.16  && < 0.15.1
    , serialise                 >= 0.2      && < 0.3
    , string-conversions        >= 0.4.0.1  && < 0.4.0.2
    , text
    , time
    , vector                    >= 0.12     && < 0.13
  default-extensions:
    DeriveAnyClass
    DeriveGeneric
    LambdaCase
    OverloadedStrings
    RecordWildCards
    TemplateHaskell
    TupleSections
