name:                ergvein-faucet-back
version:             1.0.0.0
synopsis:            Backend code that handles BTC testnet faucet.
description:         See README.md
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Ergvein.Faucet.Backend
    Ergvein.Faucet.Backend.Btc.Client
    Ergvein.Faucet.Backend.Config
    Ergvein.Faucet.Backend.Index
    Ergvein.Faucet.Backend.Monad
    Ergvein.Faucet.Backend.Server
  build-depends:
      base
    , ergvein-faucet-shared
    , base32string                  >= 0.9        && < 0.10
    , base58string                  >= 0.10       && < 0.11
    , bitcoin-api
    , bitcoin-block
    , bitcoin-script
    , bitcoin-tx
    , bitcoin-types
    , blaze-html                    >= 0.8        && < 0.10
    , blaze-markup                  >= 0.8        && < 0.10
    , bytestring                    >= 0.10       && < 0.11
    , cryptohash-sha256             >= 0.11       && < 0.12
    , exceptions                    >= 0.10       && < 0.11
    , ergvein-common
    , hexstring                     >= 0.11       && < 0.12
    , http-types                    >= 0.12       && < 0.13
    , immortal
    , immortal-worker
    , unliftio-core
    , monad-logger                  >= 0.3        && < 0.4
    , mtl                           >= 2.2        && < 2.3
    , network                       >= 2.6        && < 2.9
    , network-ip                    >= 0.3        && < 0.4
    , servant                       >= 0.16       && < 0.17
    , servant-blaze                 >= 0.9        && < 0.10
    , servant-server                >= 0.16       && < 0.17
    , tagged                        >= 0.8        && < 0.9
    , text                          >= 1.2        && < 1.3
    , time                          >= 1.6        && < 1.9
    , wai                           >= 3.2        && < 3.3
    , wai-middleware-static         >= 0.8        && < 0.9
    , yaml                          >= 0.8        && < 0.12
  default-language:    Haskell2010
  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

executable ergvein-faucet
  hs-source-dirs:
      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , monad-logger
    , optparse-applicative          >= 0.14       && < 0.15
    , text
    , warp                          >= 3.2        && < 3.3
    , ergvein-faucet-back
  default-language:    Haskell2010
  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
