name:                ergvein-faucet-client
version:             1.0.0.0
synopsis:            Client library to call faucet API from other services.
description:         See README.md
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Ergvein.Faucet.Client
  build-depends:
      base
    , aeson                 >= 1.0          && < 1.5
    , bytestring            >= 0.10         && < 0.12
    , http-client
    , http-client-tls
    , mtl
    , servant               >= 0.16         && < 0.17
    , servant-client        >= 0.16         && < 0.17
    , servant-client-core   >= 0.16         && < 0.17
    , text                  >= 1.2          && < 1.3
    , time
    , unliftio
    , unliftio-core
    , ergvein-faucet-shared
  default-language:    Haskell2010
  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
